Auto IRC Bot 3.0: Change Log
-------------------------------------------------------------------------------

3.0 Indev
===============================================================================
    * UNO now keeps game duration and cards played count.
    * Added a LOLCAT module for translating English to LOLCAT.
    * EightBall module rewritten.
    * Fixed a bug in LinkTitle that caused multi-line <title>'s to display
      wrong.
    * Added `wizard`, for creating local Auto config directories.
    * Made Auto respond properly to PRIVMSGs received before connection.
    * Added an AUR module.
    * Fixed an exploit in QDB that allowed users to use services fantasy
      commands with the bot's account.
    * Heavily improved ./install.

3.0 Alpha 7
===============================================================================
    * Fixed a bug in UNO where rehashing during a game caused a crash.
    * Proto::IRC::umodes renamed to Proto::IRC::botinfo{svr}{modes}.
    * Fixed a bug where incoming PART's from ourselves were not parsed.
    * Our usermodes are now tracked in Proto::IRC::umodes.
    * Added an Oper module.
    * Added events on_cmode and on_umode.
    * Added event on_myinfo for RPL_MYINFO (numeric 004).
    * Raw hooks now take hook names and support multiple hooks. This changes
      rchook_add and rchook_del.
    * Vim modelines must be at the bottom of files. Modules updated.
    * Renamed Lib::Users to Core::IRC::Users.
    * Added Lib::Users, for network-wide user tracking. This brings many new
      possibilities to modules, including an account system.
    * Added hook on_namesreply.
    * All data related to a network is now deleted on disconnect.
    * Added hook on_disconnect.
    * Added various options to bin/auto, including support for multiple config
      files. See bin/auto -h for details.
    * Changed on_nick, on_quit, on_part, and on_kick source hashrefs to include
      server, removing svr.