@@ -375,15 +375,15 @@ sub match_user {
                 my $svr = $ulhp{net}[0];
                 if (defined $Auto::SOCKET{$svr}) {
                     if ($ccnm eq 'CURRENT' and defined $user{chan}) {
-                        if (defined $Proto::IRC::chanusers{$svr}{$user{chan}}{$user{nick}}) {
-                            if ($Proto::IRC::chanusers{$svr}{$user{chan}}{$user{nick}} =~ m/($ccst)/sm) { return $userkey; } ## no critic qw(RegularExpressions::RequireExtendedFormatting)
+                        if (defined $State::IRC::chanusers{$svr}{$user{chan}}{$user{nick}}) {
+                            if ($State::IRC::chanusers{$svr}{$user{chan}}{$user{nick}} =~ m/($ccst)/sm) { return $userkey; } ## no critic qw(RegularExpressions::RequireExtendedFormatting)
                         }
                     }
                     else {
                         foreach my $bcj (keys %{ $Proto::IRC::botchans{$svr} }) {
                             if (API::IRC::match_mask($bcj, $ccnm)) {
-                                if (defined $Proto::IRC::chanusers{$svr}{$bcj}{$user{nick}}) {
-                                    if ($Proto::IRC::chanusers{$svr}{$bcj}{$user{nick}} =~ m/($ccst)/sm) { return $userkey; } ## no critic qw(RegularExpressions::RequireExtendedFormatting)
+                                if (defined $State::IRC::chanusers{$svr}{$bcj}{$user{nick}}) {
+                                    if ($State::IRC::chanusers{$svr}{$bcj}{$user{nick}} =~ m/($ccst)/sm) { return $userkey; } ## no critic qw(RegularExpressions::RequireExtendedFormatting)
                                 }
                             }
                         }
